added print methods and set up main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,10 +19,9 @@ FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download
                         #   GIT_TAG v3.11.3)
 FetchContent_MakeAvailable(json)
 
+file(REMOVE_RECURSE ${CMAKE_BINARY_DIR}/cache)
 
-# add_library(segments segment.h segment.cpp)
-# target_link_libraries(segments PRIVATE nlohmann_json::nlohmann_json)
-# target_link_libraries(${PROJECT_NAME} PRIVATE segments)
+
 
 add_subdirectory(lib)
 add_subdirectory(bin)
